css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;

  box-sizing: border-box;
  font: normal 100%/1.3 "Josefin Sans", sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

h1 {
  font-size: 4rem;
  margin: 0;
}

body {
  margin: 0;
  padding: 0;
  background-color: #e6dfda;
}

header {
  background-color: #141446;
  color: #fff;
}

img {
  width: 100%;
}

.img-flex {
  display: block;
  width: 100%;
}

h1, h2 {
  font-family: "Amatic SC", cursive;
  font-weight: bold;
  text-align: center;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

nav a {
  padding: .5rem 0;
  text-align: center;
  display: inline-block;
  text-decoration: none;
  color: #fff;
  width: 100%;
  transition: 550ms;
}

nav a:hover {
  background-color: #4b4b63;
  transition: 550ms;
}

.current {
  background-color: #393963;
}

p {
  padding: 0 1rem 1.5rem;
  margin: 0;
}

section:nth-child(2n) {
  background-color: #c7c1bc;
}

section:first-child {
  padding-top: 0;
}

h2 {
  margin: 0;
  padding: 1.3rem;
  font-size: 1.75rem;
}

.img-float {
  overflow: hidden;
  padding: 0 1rem;
}

.img-float h2 {
  padding-top: 7%;
}

.img-left {
  float: left;
  width: 25%;
}

.img-right {
  float: right;
  width: 25%;
}

.cards {
  margin: auto;
  max-width: 25rem;
}

.card {
  border: 5px solid #141446;
  border-radius: 25px;
  padding: .5rem;
  margin: 0 1rem 1rem;
  overflow: hidden;
  display: inline-block;
  text-decoration: none;
  color: #000;
  transition: 250ms;
}

.card:hover {
  background-color: #141446;
  transition: 250ms;
}

.img-card {
  overflow: hidden;
  display: inline-block;
  width: 30%;
  vertical-align: middle;
}

dl {
  overflow: hidden;
  width: 11rem;
  margin: auto;
}

dt, dd {
  display: inline-block;
  width: auto;
  margin: 0;
}

.btn {
  display: inline-block;
  border: 3px solid #141446;
  border-radius: 10px;
}

strong {
  padding: .25rem;
  margin-bottom: .3rem;
  transition: 250ms;
}

.card:hover strong {
  background-color: #4b4b63;
  border-color: #4b4b63;
  color: #e6dfda;
  transition: 250ms;
}

.card-text {
  display: inline-block;
  width: 68%;
  text-align: center;
  vertical-align: middle;
}

.card-text dl {
  text-align: left;
}

.card:hover dl {
  color: #e6dfda;
  transition: 250ms;
}

.quote {
  padding: 1rem;
}

cite {
  margin: 1rem;
}

footer {
  background-color: #141446;
  color: #fff;
  text-align: center;
}

footer p {
  margin: 0;
  padding: .5rem;
}

.icons li {
  display: inline-block;
}

span {
  float: left;
}

.logo {
  max-width: 3.5rem;
}

.video {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 25px;
  height: 0;
}

.video iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

@media only screen and (min-width: 25em) {

  html {
    font-size: 100%;
    line-height: 1.3;
  }

}

@media only screen and (min-width: 38em) {

  html {
    font-size: 110%;
    line-height: 1.4;
  }

}

@media only screen and (min-width: 60em) {

  html {
    font-size: 120%;
    line-height: 1.5;
  }

}

@media only screen and (min-width: 90em) {

  html {
    font-size: 130%;
  }

}

